# imandra-ros

./: README.md
dictionary-script/: ROS_Message_Codegenration.ipynb  leech_rosmsg_json.py  msginfo.py  rosmsgs.json
docs/notebooks/: Creating and verifying a ROS node in Imandra.ipynb  CreatingAndVerifyingROSNode.ipynb  Simple_ROS_Node_Model.ipynb
imandra_model/: Makefile  ROS_Model.ipynb  ROS_Verify.ipynb  Robotic OS 2.ipynb  Simple_ROS_Node_Model.ipynb  Simple_ROS_Verify.ipynb  Untitled.ipynb  dune-project  jbuild  ros_model.ml  rosnode.ml
imandra_model/src-codegen/: cg.ml  codegen.ml  codegen_json.ml  dune  msgs.json
imandra_model/src-messages/: actionlib.ml  actionlib_msgs.ml  actionlib_tutorials.ml  basic_types.ml  bond.ml  control_msgs.ml  controller_manager_msgs.ml  diagnostic_msgs.ml  dune  dynamic_reconfigure.ml  gazebo_msgs.ml  geometry_msgs.ml  jbuild  json_to_message.ml  map_msgs.ml  message_to_json.ml  messages.ml  nav_msgs.ml  pcl_msgs.ml  ros_message.ml  roscpp.ml  rosgraph_msgs.ml  rospy_tutorials.ml  sensor_msgs.ml  shape_msgs.ml  smach_msgs.ml  std_msgs.ml  stereo_msgs.ml  tf.ml  tf2_msgs.ml  theora_image_transport.ml  trajectory_msgs.ml  turtle_actionlib.ml  turtlesim.ml  visualization_msgs.ml
imandra_model/src-messages-pp/: actionlib_msgs_of_json.ml  actionlib_msgs_to_json.ml  actionlib_of_json.ml  actionlib_to_json.ml  actionlib_tutorials_of_json.ml  actionlib_tutorials_to_json.ml  basic_types.ml  basic_types_of_json.ml  basic_types_to_json.ml  bond_of_json.ml  bond_to_json.ml  builtin_interfaces.ml  control_msgs_of_json.ml  control_msgs_to_json.ml  controller_manager_msgs_of_json.ml  controller_manager_msgs_to_json.ml  diagnostic_msgs_of_json.ml  diagnostic_msgs_to_json.ml  dune  dynamic_reconfigure_of_json.ml  dynamic_reconfigure_to_json.ml  gazebo_msgs_of_json.ml  gazebo_msgs_to_json.ml  geometry_msgs_of_json.ml  geometry_msgs_to_json.ml  jbuild  json_utils.ml  map_msgs_of_json.ml  map_msgs_to_json.ml  nav_msgs_of_json.ml  nav_msgs_to_json.ml  pcl_msgs_of_json.ml  pcl_msgs_to_json.ml  roscpp_of_json.ml  roscpp_to_json.ml  rosgraph_msgs.ml  rosgraph_msgs_of_json.ml  rosgraph_msgs_to_json.ml  rospy_tutorials_of_json.ml  rospy_tutorials_to_json.ml  (+26 more)
imandra_model/src-messages/_build/: log
imandra_model/src-model/: dune  jbuild  model_codec.ml  ros_complex_model.ml  ros_model.ml  ros_simple_model.ml
imandra_model/src-node/: dune  jbuild  rosnode.ml
imandra_model/src-rosmsg/: dune  ros_messages_json.ml
imandra_model/src-utils/: imandra_prelude.ml  jbuild
imandra_model/src-wrapper/: imandra_prelude.ml  jbuild  json_to_message.ml
imandra_model/vgs/: top.ml  vgs.ml
imandrabot_ws/: cmds  env.sh  memo
imandrabot_ws/src/imandrabot/: package.xml  setup.cfg  setup.py
imandrabot_ws/src/imandrabot/imandrabot/: imandra_zmq_proxy.py  json_utils.py
imandrabot_ws/src/imandrabot/launch/: robot_launch.py
imandrabot_ws/src/imandrabot/protos/: imandrabot.proto
imandrabot_ws/src/imandrabot/resource/: imandrabot.urdf  ros2_control.yml
imandrabot_ws/src/imandrabot/worlds/: world.wbt
imandrabot_ws/src/imandrabot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
imandrabot_ws/src/imandrabot_description/protos/: imandrabot.proto
imandrabot_ws/src/imandrabot_description/urdf/: imandrabot.gazebo  imandrabot.xacro
imandrabot_ws/src/imandrabot_gazebo/: CMakeLists.txt  package.xml
imandrabot_ws/src/imandrabot_gazebo/launch/: imandrabot_world.launch
imandrabot_ws/src/imandrabot_gazebo/world/: empty.world
imandrabot_ws/src/zmq_wrapper/: CMakeLists.txt  package.xml
imandrabot_ws/src/zmq_wrapper/src/: ros_zmq_translate.py  test.py
message-codegen/src/: caml_ast.ml  codegen.ml  codegen_t.ml  dune  msgs_dataset.ml  parse.ml  rosmessage.ml  rostype.ml
mybot_ws/: cmds  env.sh
mybot_ws/devel/: _setup_util.py  setup.sh
mybot_ws/devel/lib/pkgconfig/: imandra_model.pc  mybot_control.pc  mybot_description.pc  mybot_gazebo.pc  wanderbot.pc
mybot_ws/src/imandra_model/: CMakeLists.txt  package.xml
mybot_ws/src/imandra_model/src/: imandra_model.cpp  jbuild  message_to_json.ml  ros_model.ml  ros_wrappers.cpp  ros_wrappers.ml  (+3 more)
rosocaml/: jbuild  master_api.ml  master_api.mli  slave_api.ml  slave_client.ml  slave_client.mli  slave_server.ml  slave_server.mli  t  test.ml  test_slave.ml
(+3 files in other folders)
