<?xml version="1.0"?>
<package format="2">
  <name>imandrabot_description</name>
  <version>0.1.0</version>
  <description>The description package for an imandrabot</description>

  <maintainer email="kostya@aestheticintegration.com">Kostya Kanishchev</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/AestheticIntegration/imandra-ros</url>
  <author email="kostya@aestheticintegration.com">Kostya Kanishchev</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
