<?xml version="1.0"?>
<package format="2">
  <name>imandrabot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo package for an imandrabot</description>

  <maintainer email="kostya@aestheticintegration.com">Kostya Kanishchev</maintainer>
  <license>TODO</license>

  <url type="website">https://github.com/AestheticIntegration/imandra-ros</url>
  <author email="kostya@aestheticintegration.com">Kostya Kanishchev</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
