<?xml version="1.0"?>
<package format="2">

  <name>zmq_wrapper</name>
  <version>0.1.0</version>
  <description>ZMQ -- ROS messaging python wrapper </description>

  <maintainer email="kostya@aestheticintegration.com">Kostya Kanishchev</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/AestheticIntegration/imandra-ros</url>
  <author email="kostya@aestheticintegration.com">Kostya Kanishchev</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
